sandbox-codebase/objects/heymarket__Template__c/fields/heymarket__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Date_Format__c</fullName>
    <label>Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>heymarket__Date_Format</valueSetName>
    </valueSet>
</CustomField>