sandbox-codebase/objects/heymarket__Template__c/fields/heymarket__Is_active__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>