sandbox-codebase/objects/heymarket__Template__c/fields/heymarket__Is_archive__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Archive</label>
    <type>Checkbox</type>
</CustomField>