sandbox-codebase/objects/heymarket__Template__c/fields/heymarket__Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Record_Type_Id__c</fullName>
    <label>Record Type Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>