sandbox-codebase/objects/heymarket__Template__c/listViews/heymarket__All_Templates.listView-meta.xml
<ListView>
    <fullName>heymarket__All_Templates</fullName>
    <columns>NAME</columns>
    <columns>heymarket__Is_active__c</columns>
    <columns>heymarket__Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Templates</label>
</ListView>